--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Para mamá</title>
   </head>
   <body>
@@ -10,3 +10,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
